# mlir-playground

./: .gitignore  CMakeLists.txt  README.md
call/: CMakeLists.txt  call_test.mlir  oaru.cu  smalllib.cu
gpu/: global_reduce_add.mlir  reduce_max.mlir  wg_reduce_add.mlir  wg_reduce_and.mlir  wg_reduce_min.mlir  wg_reduce_or.mlir  wg_reduce_xor.mlir
matmul/: matmul10x10.mlir  matmul10x10_loops.mlir  matmul2048x2048.mlir  run.md
oaru_light/: CMakeLists.txt  oaru.cu
openacc/: CMakeLists.txt  RFC.md  call_runtime.mlir  lit.cfg.py.in  matmul10x10.mlir  ops.mlir  parallel_loop_1d.mlir  parallel_loop_1d_gang.mlir  parallel_loop_1d_private.mlir  parallel_loop_1d_seq.mlir  parallel_loop_1d_to_seq.mlir  parallel_loop_2d_collapse.mlir  parallel_loop_2d_collapse_dyn_gang.mlir  parallel_loop_2d_collapse_free_gang.mlir  parallel_loop_2d_gang_vector.mlir  parallel_loop_3d_collapse.mlir  parallel_loop_3d_collapse_2.mlir  parallel_loop_3d_collapse_3.mlir  parallel_reduction.c  parallel_reduction.mlir  parallel_simple.mlir  parallel_with_attributes.mlir  parallel_with_loop.mlir  parallel_with_loop_gang.mlir  update_config.in
saxpy/: saxpy.c  saxpy.cu  saxpy.f90  saxpy.mlir  saxpy_acc.mlir  saxpy_gpu.mlir  saxpy_parallel.mlir
std/: loop_yield.mlir
